[package]
name = "darkpool"
version = "0.1.0"
description = "DarkDrop: Privacy-focused token drop system with on-chain nullifier verification"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "darkpool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
poseidon = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1" }
ark-bn254 = "0.4.0"
ark-ff = "0.4.2"
light-poseidon = "0.2.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"


[lints.rust]
unsafe_code = "forbid"

